Updated README; Refactored DAG; Added images directory; Updated .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,6 @@
 .vscode/*
 kansas-city-crime/airflow/logs/*
 kansas-city-crime/airflow/__pycache__
+kansas-city-crime/airflow/dags/__pycache__
 kansas-city-crime/airflow/dags/data
+kansas-city-crime/dags
