--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,4 @@ kansas-city-crime/airflow/__pycache__
 kansas-city-crime/airflow/dags/__pycache__
 kansas-city-crime/airflow/dags/data
 kansas-city-crime/dags
+sophies-saltines/
