--- a/monster-tacos/docker-compose.yml
+++ b/monster-tacos/docker-compose.yml
@@ -13,11 +13,10 @@ services:
       POSTGRES_DB: demo
     volumes:
       - ./postgres/data:/var/lib/postgresql/data
-#      - ./sql/setup.sql:/docker-entrypoint-initdb.d/schema.sql
-#    healthcheck:
-#      test: ["CMD", "pg_isready", "-U", "master", "-d", "demo"]
-#      interval: 5s
-#      retries: 5
+    healthcheck:
+      test: ["CMD", "pg_isready", "-U", "master", "-d", "demo"]
+      interval: 5s
+      retries: 5
     restart: always
   zookeeper:
     image: confluentinc/cp-zookeeper:6.1.0
