--- a/monster-tacos/docker-compose.yml
+++ b/monster-tacos/docker-compose.yml
@@ -8,13 +8,13 @@ services:
     ports:
       - "5432:5432"
     environment:
-      POSTGRES_USER: master
+      POSTGRES_USER: postgres
       POSTGRES_PASSWORD: postgres
-      POSTGRES_DB: demo
+      POSTGRES_DB: monster_tacos
     volumes:
       - ./postgres/data:/var/lib/postgresql/data
     healthcheck:
-      test: ["CMD", "pg_isready", "-U", "master", "-d", "demo"]
+      test: ["CMD", "pg_isready", "-U", "master", "-d", "monster_tacos"]
       interval: 5s
       retries: 5
     restart: always
